First iteration of verification working

--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,10 @@
-<script src="Task1.js"></script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="utf-8">
+    <script src="http://code.jquery.com/jquery-1.10.2.js"></script>
+	<script src="Task1.js"></script>
+  </head>
+  <body>		
+  </body>
+</html>
